--- a/index.html
+++ b/index.html
@@ -4,10 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cesc-xtec.github.io
-</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <title>Cesc-xtec.github.io</title>
+    <link rel="icon" type="image/png" href="img/favicon.png">    
 </head>
 <body>
-    
+    <header class="w3-container w3-teal">
+        <h1>Continguts cicles formatius</h1>
+    </header>
+    <div class="w3-container">
+        <div class="w3-row">
+            <div class="w3-container w3-half">
+                <figure>
+                    <img src="img/El lloc de Cesc.png" alt="El lloc d'en Cesc" width="100%">
+                </figure>
+            </div>
+            <div class="w3-container w3-half">
+                <h2>Projectes (Design Thinking)</h2>
+                <ul>
+                    <li><h3>DAM (Desenvolupament d'Aplicacions Multiplataforma)</h3>
+                        <ul>
+                            <li><h4><a href="projecte-receptes/projecte-receptes.html">Institut Català de Cuina</a></h4></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
